--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,12 +23,14 @@ mybatis-plus.type-aliases-package=cn.com.sise.welfare.entity
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 spring.mvc.static-path-pattern=/**
 #文件上传
-spring.servlet.multipart.max-file-size=50MB
+#spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 #文件上传路径
 #upload.file.path=D:/image/
 #virtual.file.path=/image/
-upload.file.path=H:/uploadImage/
+upload.file.path=D:/uploadImage/
 virtual.file.path=/upload/
 spring.web.resources.static-locations=classpath:/static/,file:${upload.file.path}
 server.tomcat.connection-timeout=180000
