--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #MySQL数据库连接配置
-spring.datasource.url=jdbc:mysql://172.17.180.119:3306/public_wealth?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/public_wealth?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -33,4 +33,4 @@ spring.servlet.multipart.max-request-size=100MB
 upload.file.path=D:/uploadImage/
 virtual.file.path=/upload/
 spring.web.resources.static-locations=classpath:/static/,file:${upload.file.path}
-server.tomcat.connection-timeout=180000
+server.tomcat.connection-timeout=180000000
